@@ -1,3 +1,7 @@
+Aug 28, 2014 - chris ---------------------------------------------------
+o Bugfix: fixed-length records were sometimes not inserted correctly 
+	with HAM_DUPLICATE_INSERT_FIRST
+
 Aug 26, 2014 - chris ---------------------------------------------------
 o Introduced two new makros to initialize ham_key_t and ham_record_t
 	structures
